static_in_pro/our_static/css/results_feature.css
#results-container{
    background-color: white;
}
/* Feature Open/Close Mode */
#close-mode{
    display: none;
}
#open-mode{
    display: block;
}
#close-mode span{
    height: 60px;
    font-size: 24px;
    font-family: "Bariol";
    color: rgb(230, 89, 42);
    line-height: 1.6;
    text-align: center;
    padding: 0px 0px 25px 0px;
}
/* Open/Close Button */
.control-btn{
    height: 15px;
    width: 30px;
    border: none;
}
#open-btn{
    background: url("../img/results/open_button.svg") no-repeat;
}
#close-btn{
    background: url("../img/results/close_button.svg") no-repeat;
    position: relative;
    top: -15px;
    z-index: 10;
}
/* Slider */
#price-slider{
    display: block;
    padding: 10px 0px 10px 0px;
}
#slider-range{
    display: inline-block;
    width: 322px;
    height: 4px;
    background: #e6592a;
    border: none;
}
/* Slider Controls */
#slider-range span {
    border-radius: 50%;
    border-color: rgb(229, 179, 77);
    background: rgb(229, 179, 77);
    width: 16px;
    height: 16px;
    /*z-index: 10;*/
}
#slider-range span:hover{
    cursor: pointer;
}
#slider-range span:active{
    outline: none!important;
    border-style: none!important;
}
/* Slider - Selected Range */
#slider-range div{
    background: #e6592a;
    border: none;
    /*height: 4px;*/
}
/* Min and Max Price */
.price-tag{
    display: inline-block;
    width: 70px;
    font-size: 17px;
    font-family: "Bariol";
    color: #e6592a;
    border: none;
    text-align: center;
    line-height: 1;
    position: relative;
    top: 4px;
    /*padding: 0px;*/
}
/* Deals */
#deals-wrapper{
    display: block;
    /*float: left;*/
    padding: 5px 0px 10px 0px;
}
/* Deals Total Results */
#total-results{
    display: inline-block;
    width: 160px;
    padding: 0px 10px 0px 10px;
    text-align: center;
    vertical-align: middle;
    position: relative;
    top: -18px;
    left: -80px;
}
#total-results span:first-of-type{
    font-size: 33px;
    font-family: "Bariol";
    color: rgb(249, 163, 51);
    font-weight: bold;
    line-height: 1.2;
}
#total-results span:last-of-type{
    font-size: 30px;
    font-family: "Bariol";
    color: rgb(0, 0, 0);
    line-height: 0;
}
#total-results a{
    display: block;
    position: relative;
    top: 1px;
    text-decoration: none;
}
#total-results a:visited{
    color: #337ab7;
}
#total-results a i{
    color: rgba(51, 122, 183, 0.8);
    font-size: 13px;
}
/* Deals List */
.list-group-horizontal{
    display: inline-block;
    position: relative;
    left: -80px;
}
.list-group-item {
    display: inline-block;
    width: 150px;
    vertical-align: middle;
}
.list-group-item img{
    float: left;
    height: 120px;
    width: 120px;
}
.list-group-item div{
    width: 135px;
}
.list-group-item div span{
    display: block;
    text-align: left;
    font-family: "Bariol";
}
.list-group-item div span:nth-of-type(1){
    font-size: 20px;
    font-weight: bold;
    color: #e5b34d;
    line-height: 1.8;
}
.list-group-item div span:nth-of-type(2){
    font-size: 17px;
    color: #e6592a;
    border: none;
    line-height: 1.5;
}
.list-group-item div span:nth-of-type(3){
    font-size: 15px;
    color: rgb(0, 0, 0);
    line-height: 1.2;
}

/* Results Feature - Responsive */

/* Extra small devices - 320px Design (phones, less than 480px) */
@media (max-width: 767px) {

}
/* Extra small devices - 480px Design (phones, less than 768 and greater than 480) */
@media (min-width: 480px) and (max-width: 767px) {

}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    #results-feature{
        display: block!important;
    }
}
/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    #total-results{
        width: 85px;
        padding: 0px 5px 0px 5px;
        left: -30px;
    }
    #total-results span:first-child{
        font-size: 25px;
    }
    #total-results span:last-child{
        font-size: 22px;
    }
    .list-group-horizontal{
        left: -21.25px;
    }
    .list-group-item {
        width: 270px;
    }
    .list-group-item img{
        display: inline-block;
        float: right;
        height: 100px;
        width: 100px;
    }
    .list-group-item div{
        display: inline-block;
    }
}
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    #total-results{
        width: 160px;
        padding: 0px 10px 0px 10px;
        left: -60px;
    }
    #total-results span:first-child{
        font-size: 33px;
    }
    #total-results span:last-child{
        font-size: 30px;
    }
    .list-group-horizontal{
        left: -80px;
    }
    .list-group-item {
        width: 300px;
    }
    .list-group-item img{
        height: 120px;
        width: 120px;
    }

}

